# RemoteController

./: .gitmodules  AudioCapturer.h  BaseEngine.cpp  BaseEngine.h  CString.h  Common.cpp  Common.h  ConnectionHandler.cpp  ConnectionHandler.h  Data.h  Event.cpp  Event.h  NOTICE  README.md  RemoteController.sln  RemoteControllerWinRT.sln  Timer.h  ZlibUtils.cpp  ZlibUtils.h  touch.bat
Client/: Client.cpp  Client.h
ClientIOS/: AppDelegate.h  AppDelegate.m  BaseViewControllerWithNetwork.h  BaseViewControllerWithNetwork.m  NetworkHandler.h  NetworkHandler.m  RemoteViewController.h  RemoteViewController.m  RemoteViewController.mm  ViewController.h  ViewController.m  ViewController.mm  main.m
ClientIOS/Base.lproj/: Main.storyboard
RemoteController.xcodeproj/: project.pbxproj
RemoteController.xcodeproj/xcuserdata/lehoangquyen.xcuserdatad/xcschemes/: Client.xcscheme  RemoteController.xcscheme  xcschememanagement.plist
RemoteControllerWinRT/RemoteControllerWinRT.Shared/: RemoteControllerWinRT.Shared.vcxitems  RemoteControllerWinRT.Shared.vcxitems.filters  dllmain.cpp
RemoteControllerWinRT/RemoteControllerWinRT.Windows/: RemoteControllerWinRT.Windows.vcxproj
RemoteControllerWinRT/RemoteControllerWinRT.WindowsPhone/: RemoteControllerWinRT.WindowsPhone.vcxproj
Server/: AudioCapturer.h  Engine.cpp  Engine.h  FrameCapturer.cpp  FrameCapturer.h  FrameCapturerGL.cpp  FrameCapturerGL.h  ImgCompressor.cpp  ImgCompressor.h  JpegCompressor.cpp  PngCompressor.cpp  RemoteController.vcxproj  RemoteController.vcxproj.filters
Server/android/: EngineAndroid.cpp
Server/apple/: EngineApple.mm  ImgCompressorApple.cpp
Server/win32/: EngineWin32.cpp
Server/winrt/: EngineWinRT.cpp
android/: CMakeLists.txt  ConnectionHandlerAndroid.cpp  JniUtils.cpp  JniUtils.h
android/jni/: Android.mk  Application.mk
apple/: ConnectionHandlerApple.cpp  TimerApple.cpp
linux/: ConnectionHandlerLinux.cpp  TimerLinux.cpp
unix/: ConnectionHandlerUnix.cpp
win32/: ConnectionHandlerWin32.cpp  TimerWin32.cpp
